healthcheck-app/Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: healthcheck-app
  namespace: retry-test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthcheck-app
  template:
    metadata:
      labels:
        app: healthcheck-app
      annotations:
        sidecar.istio.io/inject: 'true'
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: healthcheck-app
          image: tanyavoteva/healthcheck-app
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
