healthcheck-app/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: healthcheck-app
  namespace: test-project
spec:
  selector:
    app: healthcheck-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
