healthcheck-app/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: healthcheck-app
  namespace: retry-test-project
spec:
  gateways:
    - istio-ingressgateway
  hosts:
    - healthcheck-app.org
  http:
    - route:
        - destination:
            host: healthcheck-app
